# autograder-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: all.toml  hw18.toml  minimal.toml
src/autograder/: __main__.py  generator.py  thing.py
src/autograder-generator/: test.py
src/autograder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/autograder/templates/: requirements.txt  run_autograder  setup.sh  test_compile.py
src/autograder/templates/tests/: config.py  test_compile.py  test_files.py  test_memory.py  test_program.py  weights.py
src/autograder_generator.egg-info/: PKG-INFO  SOURCES.txt
src/examples/: hw18.py  hw18.toml
src/gradergen/: __main__.py  generator.py
src/gradergen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/gradergen/templates/: requirements.txt  run_autograder
src/gradergen/templates/tests/: config.py  test_files.py  test_memory.py  test_program.py  weights.py
tests/: test_demo.py
