[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autograder-generator"
version = "0.0.1"
authors = [
  { name="Grayson Nocera", email="gnocera@purdue.edu" },
]
description = "ECE 264 utility for generating autograders"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/GraysonNocera/autograder-generator"
Issues = "https://github.com/GraysonNocera/autograder-generator/issues"