[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autograder"
version = "0.0.1"
authors = [
  { name="Grayson Nocera", email="gnocera@purdue.edu" },
]
description = "ECE 264 utility for generating autograders"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
  "gradescope-utils>=0.3.1",
  "parameterized",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
gradergen = "autograder.__main__:main"

[project.urls]
Homepage = "https://github.com/GraysonNocera/autograder-generator"
Issues = "https://github.com/GraysonNocera/autograder-generator/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]