[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gradergen"
version = "0.0.1"
authors = [
  { name="Grayson Nocera", email="gnocera@purdue.edu" },
]
description = "ECE 264 utility for generating autograders"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
  "gradescope-utils>=0.3.1",
  "parameterized",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
gradergen = "gradergen.__main__:main"

[project.urls]
Homepage = "https://github.com/GraysonNocera/gradergen"
Issues = "https://github.com/GraysonNocera/gradergen/issues"

[tool.setuptools.package-data]
"*" = ["*.*"] 

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]